--- a/package.json
+++ b/package.json
@@ -1,15 +1,70 @@
 {
-  "name": "react-native-smart-amap",
-  "version": "1.0.6",
+  "_args": [
+    [
+      {
+        "raw": "react-native-smart-amap",
+        "scope": null,
+        "escapedName": "react-native-smart-amap",
+        "name": "react-native-smart-amap",
+        "rawSpec": "",
+        "spec": "latest",
+        "type": "tag"
+      },
+      "/Users/lintong/Project/react-native/CloudSpeak"
+    ]
+  ],
+  "_cnpm_publish_time": 1492348337362,
+  "_from": "react-native-smart-amap@latest",
+  "_id": "react-native-smart-amap@1.0.6",
+  "_inCache": true,
+  "_location": "/react-native-smart-amap",
+  "_nodeVersion": "6.7.0",
+  "_npmOperationalInternal": {
+    "host": "packages-18-east.internal.npmjs.com",
+    "tmp": "tmp/react-native-smart-amap-1.0.6.tgz_1492348334649_0.7721631089225411"
+  },
+  "_npmUser": {
+    "name": "cyqresig",
+    "email": "moonsunfall@aliyun.com"
+  },
+  "_npmVersion": "3.10.3",
+  "_phantomChildren": {},
+  "_requested": {
+    "raw": "react-native-smart-amap",
+    "scope": null,
+    "escapedName": "react-native-smart-amap",
+    "name": "react-native-smart-amap",
+    "rawSpec": "",
+    "spec": "latest",
+    "type": "tag"
+  },
+  "_requiredBy": [
+    "#USER",
+    "/"
+  ],
+  "_resolved": "https://registry.npm.taobao.org/react-native-smart-amap/download/react-native-smart-amap-1.0.6.tgz",
+  "_shasum": "9be6e2204da552f2e7f7d542ff746568d3451f4f",
+  "_shrinkwrap": null,
+  "_spec": "react-native-smart-amap",
+  "_where": "/Users/lintong/Project/react-native/CloudSpeak",
+  "author": {
+    "name": "HISAME SHIZUMARU"
+  },
+  "bugs": {
+    "url": "https://github.com/react-native-component/react-native-smart-amap/issues"
+  },
+  "dependencies": {},
   "description": "A AMap Library for React Native apps.",
-  "main": "AMap.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "devDependencies": {},
+  "directories": {},
+  "dist": {
+    "shasum": "9be6e2204da552f2e7f7d542ff746568d3451f4f",
+    "size": 7379220,
+    "noattachment": false,
+    "tarball": "http://registry.npm.taobao.org/react-native-smart-amap/download/react-native-smart-amap-1.0.6.tgz"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/react-native-component/react-native-smart-amap.git"
-  },
+  "gitHead": "69c182ce854e0e8a44e6ef5f963f8cda75d73003",
+  "homepage": "https://github.com/react-native-component/react-native-smart-amap#readme",
   "keywords": [
     "react-native",
     "smart",
@@ -17,10 +72,24 @@
     "amap",
     "component"
   ],
-  "author": "HISAME SHIZUMARU",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/react-native-component/react-native-smart-amap/issues"
+  "main": "AMap.js",
+  "maintainers": [
+    {
+      "name": "cyqresig",
+      "email": "moonsunfall@aliyun.com"
+    }
+  ],
+  "name": "react-native-smart-amap",
+  "optionalDependencies": {},
+  "publish_time": 1492348337362,
+  "readme": "ERROR: No README data found!",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/react-native-component/react-native-smart-amap.git"
   },
-  "homepage": "https://github.com/react-native-component/react-native-smart-amap#readme"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "version": "1.0.6"
 }
